User
- added resetpassword and updateprofile api for logged in user.

- admin can use Update User to update password

- added lockandunlock api to restrict sub admin login
