# app/routes/auth.routes.js
@@ -1,7 +1,7 @@
-const { userCheck } = require("../middlewares");
+const { authJwt, userCheck } = require("../middlewares");
 const controller = require("../controllers/auth.controller");
 
-module.exports = function(app) {
+module.exports = function (app) {
   app.post(
     "/api/auth/signup",
     [
@@ -13,6 +13,21 @@ module.exports = function(app) {
   );
 
   app.post("/api/auth/signin", controller.signin);
+
+  app.post(
+    "/api/auth/resetpassword",
+    [authJwt.verifyToken],
+    controller.resetPassword
+  );
+
+  app.post(
+    "/api/auth/updateprofile",
+    [authJwt.verifyToken],
+    [
+      userCheck.checkUserExist
+    ],
+    controller.updateUser
+  );
 
   app.post("/api/auth/refreshtoken", controller.refreshToken);
 };
